<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android" 
    android:padding="@dimen/calculator_frame_padding"
    android:layout_width="fill_parent" 
    android:layout_height="fill_parent">
      
	<TableLayout 
		android:id="@+id/input_layout" 
		android:shrinkColumns="2,3"
		android:stretchColumns="2,3"
		android:layout_alignParentBottom="true" 
		android:layout_width="fill_parent"
		android:layout_height="wrap_content">
		
		<TableRow		
			android:layout_width="fill_parent"
			android:layout_height="wrap_content">
			<Button
				android:id="@+id/btn_pick_from"
				style="@style/DefaultButton"
				android:text="@string/label_from"
				android:layout_span="3"
				android:layout_width="wrap_content"
				android:layout_height="fill_parent"/>
		</TableRow>
		<TableRow		
			android:layout_width="fill_parent"
			android:layout_height="wrap_content">
			<TextView
				style="@style/DefaultLabel"
				android:text="@string/label_latitude"
				android:layout_span="1"
				android:layout_width="wrap_content"
				android:layout_height="fill_parent"/>
			<EditText
				android:id="@+id/input_from_latitude" 
				style="@style/DefaultEditText"
				android:inputType="numberDecimal"
				android:singleLine="true"
				android:hint="@string/hint_latitude"
				android:layout_span="2"
				android:layout_width="fill_parent"
				android:layout_height="fill_parent"/>
		</TableRow>
		<TableRow		
			android:layout_width="fill_parent"
			android:layout_height="wrap_content">
			<TextView
				style="@style/DefaultLabel"
				android:text="@string/label_longitude"
				android:layout_span="1"
				android:layout_width="wrap_content"
				android:layout_height="fill_parent"/>
			<EditText
				android:id="@+id/input_from_longitude" 
				style="@style/DefaultEditText"
				android:inputType="numberDecimal"
				android:singleLine="true"
				android:hint="@string/hint_longitude"
				android:layout_span="2"
				android:layout_width="fill_parent"
				android:layout_height="fill_parent"/>
		</TableRow>

		<TableRow		
			android:layout_width="fill_parent"
			android:layout_height="wrap_content">
			<Button
				android:id="@+id/btn_pick_to"
				style="@style/DefaultButton"
				android:text="@string/label_to"
				android:layout_span="3"
				android:layout_width="wrap_content"
				android:layout_height="fill_parent"/>
		</TableRow>
		<TableRow		
			android:layout_width="fill_parent"
			android:layout_height="wrap_content">
			<TextView
				style="@style/DefaultLabel"
				android:text="@string/label_latitude"
				android:layout_span="1"
				android:layout_width="wrap_content"
				android:layout_height="fill_parent"/>
			<EditText
				android:id="@+id/input_to_latitude" 
				style="@style/DefaultEditText"
				android:inputType="numberDecimal"
				android:singleLine="true"
				android:hint="@string/hint_latitude"
				android:layout_span="2"
				android:layout_width="fill_parent"
				android:layout_height="fill_parent"/>
		</TableRow>
		<TableRow		
			android:layout_width="fill_parent"
			android:layout_height="wrap_content">
			<TextView
				style="@style/DefaultLabel"
				android:text="@string/label_longitude"
				android:layout_span="1"
				android:layout_width="wrap_content"
				android:layout_height="fill_parent"/>
			<EditText
				android:id="@+id/input_to_longitude" 
				style="@style/DefaultEditText"
				android:inputType="numberDecimal"
				android:singleLine="true"
				android:hint="@string/hint_longitude"
				android:layout_span="2"
				android:layout_width="fill_parent"
				android:layout_height="fill_parent"/>
		</TableRow>
		
		<TableRow 
			android:layout_width="fill_parent"
			android:layout_height="wrap_content">
			<Button
				android:id="@+id/btn_calculate"
				style="@style/DefaultButton"
				android:text="@string/button_calculate"
				android:layout_span="3"
				android:layout_width="fill_parent"
				android:layout_height="fill_parent"/>
		</TableRow>
	</TableLayout>
	
	<TextView 
		android:id="@+id/calculated_distance"
		style="@style/CalculatorResultText"
		android:text="@string/default_geo_value"
		android:layout_alignParentTop="true" 
		android:layout_above="@id/input_layout" 
		android:layout_width="fill_parent"
		android:layout_height="wrap_content"/>
		
</RelativeLayout>